Added mongo db support
